--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
     <meta name="viewport" content = "width=device-width,inital-scale =1">
     <meta name = "description" content = "My first landing page from scratch."/>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class = "header">
-        <div class = "Logos-and-links">
+        <div class = "logos-and-links">
             <logo class ="logo">Kymanie</logo>
-            <ul>
+            <ul class="links">
                 <li><a href= "./lol">Programs</a></li>
                 <li><a href= "./lol">Our History</a></li>
                 <li><a href= "./lol">Contact Us</a></li>
@@ -34,17 +37,17 @@
             <h2>Some random info.</h2>
             <div class="card-space">
                 <div class="card">
-                    <img src="">
+                    <img src="/home/josh/Desktop/odin-project/odin-landing-page/images/black-woman.jpg">
                     <p>this is some subtext</p>
                 </div>
                 
                 <div class="card">
-                    <img src="">
+                    <img src="/home/josh/Desktop/odin-project/odin-landing-page/images/black-woman.jpg">
                     <p>this is some subtext</p>
                 </div>
 
                 <div class="card">
-                    <img src="">
+                    <img src="/home/josh/Desktop/odin-project/odin-landing-page/images/black-woman.jpg">
                     <p>this is some subtext</p>
                 </div>
                 
