Attempted to align logo and header text.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class = "header">
         <div class = "logos-and-links">
-            <logo class ="logo">Kymanie</logo>
+            <logo class ="logo">Header Logo</logo>
             <ul class="links">
                 <li><a href= "./lol">Programs</a></li>
                 <li><a href= "./lol">Our History</a></li>
