Added css styling bar call of action section.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
     <div class = "header">
+
         <div class = "logos-and-links">
             <logo class ="logo">Header Logo</logo>
             <ul class="links">
@@ -28,39 +29,45 @@
                 <p>Another placeholder.</p>
                 <button>Sign Up</button>
             </div>
+
             <img src="./images/black-woman.jpg" alt="Young Black Woman.">
         </div>
     </div>
 
     <div class="body>">
+
         <div class="information-cards">
             <h2>Some random info.</h2>
+
             <div class="card-space">
+
                 <div class="card">
-                    <img src="/home/josh/Desktop/odin-project/odin-landing-page/images/black-woman.jpg">
-                    <p>this is some subtext</p>
+                    <img src="./images/giraffe.jpg">
+                    <p>Giraffe striding around.</p>
                 </div>
                 
                 <div class="card">
-                    <img src="/home/josh/Desktop/odin-project/odin-landing-page/images/black-woman.jpg">
-                    <p>this is some subtext</p>
+                    <img src="./images/pier.jpg">
+                    <p>A pier by the Indian Ocean.</p>
                 </div>
 
                 <div class="card">
-                    <img src="/home/josh/Desktop/odin-project/odin-landing-page/images/black-woman.jpg">
-                    <p>this is some subtext</p>
+                    <img src="./images/maasai.jpg">
+                    <p>A maasai in the grasslands.</p>
                 </div>
                 
                  <div class="card">
-                    <img src="">
-                    <p>this is some subtext</p>
+                    <img src="./images/lions.jpg">
+                    <p>Cubs clubbing.</p>
                 </div>
             </div>
         </div>
+
         <div class="quote">
             <h3>Fresh out of luck. I'm here cause i deserve to be.</h3>
             <p> - Benny The Butcher.</p>
         </div>
+
         <div class="sign-up-prompt">
             <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking the button right here!</p>
