Finished the css section

--- a/index.html
+++ b/index.html
@@ -69,8 +69,10 @@
         </div>
 
         <div class="sign-up-prompt">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking the button right here!</p>
+            <div class = "prompt-text">
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up for our product by clicking the button right here!</p>
+            </div>
             <button>Sign up</button>
         </div>
     </div>
