Final touches, complete.

--- a/index.html
+++ b/index.html
@@ -68,17 +68,20 @@
             <p> - Benny The Butcher.</p>
         </div>
 
-        <div class="sign-up-prompt">
-            <div class = "prompt-text">
-                <h3>Call to action! It's time!</h3>
-                <p>Sign up for our product by clicking the button right here!</p>
+        <div class = "call-to-action">
+            <div class="sign-up-prompt">
+                <div class = "prompt-text">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking the button right here!</p>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
         </div>
+        
     </div>
 
     <div class= "footer">
-        <p>Copyright. Kymanie's Landing Page 2023</p>
+        <p>Copyright &#169. Kymanie's Landing Page 2023</p>
     </div>
 </body>
 </html>
